--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2 as fira\n",
+    "import cv2 as atta\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt"
    ]
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daun = fira.imread(\"daun.jpg\",0)\n",
+    "daun = atta.imread(\"daun.jpg\",0)\n",
     "tinggi, lebar = daun.shape"
    ]
   },
@@ -47,9 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fira.imshow('gambar asli', daun) #menampilkan gambar dalam jendela pop-up. 'gambar asli daun' \n",
-    "fira.waitKey(0) #program akan menunggu selama 0 milidetik untuk input pengguna.\n",
-    "fira.destroyAllWindows() #berguna untuk membersihkan dan menutup jendela gambar setelah program selesai dieksekusi."
+    "atta.imshow('gambar asli', daun) #menampilkan gambar dalam jendela pop-up. 'gambar asli daun' \n",
+    "atta.waitKey(0) #program akan menunggu selama 0 milidetik untuk input pengguna.\n",
+    "atta.destroyAllWindows() #berguna untuk membersihkan dan menutup jendela gambar setelah program selesai dieksekusi."
    ]
   },
   {
@@ -84,9 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fira.imshow('gambar daun_hasil', daun_hasil) #menampilkan gambar dalam jendela pop-up. 'gambar asli daun' \n",
-    "fira.waitKey(0) #program akan menunggu selama 0 milidetik untuk input pengguna.\n",
-    "fira.destroyAllWindows() #berguna untuk membersihkan dan menutup jendela gambar setelah program selesai dieksekusi."
+    "atta.imshow('gambar daun_hasil', daun_hasil) #menampilkan gambar dalam jendela pop-up. 'gambar asli daun' \n",
+    "atta.waitKey(0) #program akan menunggu selama 0 milidetik untuk input pengguna.\n",
+    "atta.destroyAllWindows() #berguna untuk membersihkan dan menutup jendela gambar setelah program selesai dieksekusi."
    ]
   },
   {
